--- a/echarts-cities-pypkg.yml
+++ b/echarts-cities-pypkg.yml
@@ -9,6 +9,7 @@ release: "0.0.1"
 copyright_year: 2018
 license: MIT
 nowheel: true
+nodocs: true
 dependencies:
   - lml>=0.0.2
 description: "Packages echarts-cities-js for pyecharts and extending dramatically the number of city coordinates."
